fix: prevent messages to appear under notch on iOS

--- a/src/assets/native.scss
+++ b/src/assets/native.scss
@@ -1,5 +1,5 @@
 body,
-.navbar {
+.navbar, .c-toast-container {
   padding-top: env(safe-area-inset-top, 0);
 }
 
